# adops-reasoner

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: scenarios_v1.jsonl  validation_notes.md  validation_notes.txt  validation_output.json
data/codex/: synthetic_scenarios_30.jsonl
data/sessions/: sess_01dab3cd0f4f.json  sess_0297a07720ed.json  sess_0a0ca12af074.json  sess_0c55287dd9b7.json  sess_11b375f6c981.json  sess_14a0ef0f54b0.json  sess_1b84b2330ecd.json  sess_21549eb580fd.json  sess_26cea886cc6e.json  sess_26eae68966ba.json  sess_2bd457139546.json  sess_39bac03b3d9e.json  sess_3a40c413a90c.json  sess_402fd95b7c15.json  sess_415b0a78ba8a.json  sess_46aa706d5569.json  sess_4a9101f6ce4a.json  sess_4fa972d8a408.json  sess_5048938ad06f.json  sess_5196a7b38f83.json  sess_58cf72a07f02.json  sess_5f9cce71fe1f.json  sess_6212cb764296.json  (+35 more)
docs/: 00_Project_Mission_and_Success.md  01_System_Design_Document_GCP.md  02_Stacked_PR_Roadmap_GCP.md  03_2Day_Showcase_MVP_Plan.md  04_Data_Strategy_No_Real_Campaign_Data.md  05_Stacked_PR_Execution_Playbook_2Day.md  06_LLM_Provider_Compatibility_Assessment.md  07_Kimi_CodingPlan_Decision_Log.md  08_Build_Config_Lock.md  09_Implementation_Readiness_Review.md  10_Architecture_Foundation_Plan.md  ARCHITECTURE_FLOW.md  E2E_DEMO_RESULTS.md  PR2_ANALYZER_CORE.md  PR4_EVALS_DEMO.md  PR5_TERRAFORM.md  PR6_CICD.md
infra/: .gitignore  README.md  main.tf  terraform.tfvars.example
scripts/: e2e_test.py  test_kimi_api.py  test_live.py  test_minimax_api.py
src/: __init__.py
(+40 files in other folders)
