[project]
name = "campaign-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.2",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.2",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests (run with: pytest -m integration)",
]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    # Pyflakes - basic error detection
    "F",
    # pycodestyle - PEP 8 errors
    "E",
    # Bugbear - common bug patterns
    "B",
    # isort - import sorting
    "I",
    # Comprehensions - simplify comprehensions
    "C4",
    # Pyupgrade - modern Python syntax
    "UP",
]
ignore = [
    # Line too long - formatter handles this
    "E501",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["src"]
